--- a/src/main/webapp/app/entities/evenement/evenement-sg-dialog.component.html
+++ b/src/main/webapp/app/entities/evenement/evenement-sg-dialog.component.html
@@ -25,23 +25,22 @@
                 [(ngModel)]="evenement.lieu"  />
         </div>
         <div class="form-group">
+            <label class="form-control-label" jhiTranslate="socialGameApp.evenement.nom" for="field_nom">Nom</label>
+            <input type="text" class="form-control" name="nom" id="field_nom"
+                [(ngModel)]="evenement.nom"  />
+        </div>
+        <div class="form-group">
             <label class="form-control-label" jhiTranslate="socialGameApp.evenement.dateFinVote" for="field_dateFinVote">Date Fin Vote</label>
             <div class="d-flex">
                 <input id="field_dateFinVote" type="datetime-local" class="form-control" name="dateFinVote" [(ngModel)]="evenement.dateFinVote"
                   />
             </div>
         </div>
-        <div class="form-group">
-            <label class="form-control-label" jhiTranslate="socialGameApp.evenement.nom" for="field_nom">Nom</label>
-            <input type="text" class="form-control" name="nom" id="field_nom"
-                [(ngModel)]="evenement.nom"  />
-        </div>
 
         <div class="form-group">
-            <label jhiTranslate="socialGameApp.evenement.vote" for="field_vote">Vote</label>
-            <select class="form-control" id="field_vote" name="vote" [(ngModel)]="evenement.voteId" >
-                <option [ngValue]="null"></option>
-                <option [ngValue]="voteOption.id" *ngFor="let voteOption of votes; trackBy: trackVoteById">{{voteOption.id}}</option>
+            <label jhiTranslate="socialGameApp.evenement.jeux" for="field_jeux">Jeux</label>
+            <select class="form-control" id="field_jeux" multiple name="jeux" [(ngModel)]="evenement.jeuxes">
+                <option [ngValue]="getSelected(evenement.jeuxes, jeuOption)" *ngFor="let jeuOption of jeus; trackBy: trackJeuById">{{jeuOption.nom}}</option>
             </select>
         </div>
     </div>
