--- a/src/main/webapp/app/entities/jeu/jeu-sg-dialog.component.html
+++ b/src/main/webapp/app/entities/jeu/jeu-sg-dialog.component.html
@@ -66,10 +66,10 @@
         </div>
 
         <div class="form-group">
-            <label jhiTranslate="socialGameApp.jeu.vote" for="field_vote">Vote</label>
-            <select class="form-control" id="field_vote" name="vote" [(ngModel)]="jeu.voteId" >
+            <label jhiTranslate="socialGameApp.jeu.proprietaire" for="field_proprietaire">Proprietaire</label>
+            <select class="form-control" id="field_proprietaire" name="proprietaire" [(ngModel)]="jeu.proprietaireId" >
                 <option [ngValue]="null"></option>
-                <option [ngValue]="voteOption.id" *ngFor="let voteOption of votes; trackBy: trackVoteById">{{voteOption.id}}</option>
+                <option [ngValue]="userOption.id" *ngFor="let userOption of users; trackBy: trackUserById">{{userOption.login}}</option>
             </select>
         </div>
     </div>
