--- a/src/main/webapp/app/entities/sphere/sphere-sg-dialog.component.html
+++ b/src/main/webapp/app/entities/sphere/sphere-sg-dialog.component.html
@@ -25,6 +25,13 @@
                 <option [ngValue]="evenementOption.id" *ngFor="let evenementOption of evenements; trackBy: trackEvenementById">{{evenementOption.id}}</option>
             </select>
         </div>
+        <div class="form-group">
+            <label jhiTranslate="socialGameApp.sphere.administrateur" for="field_administrateur">Administrateur</label>
+            <select class="form-control" id="field_administrateur" name="administrateur" [(ngModel)]="sphere.administrateurId" >
+                <option [ngValue]="null"></option>
+                <option [ngValue]="userOption.id" *ngFor="let userOption of users; trackBy: trackUserById">{{userOption.login}}</option>
+            </select>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" (click)="clear()">
