--- a/src/main/webapp/app/entities/jeu/jeu-sg-dialog.component.html
+++ b/src/main/webapp/app/entities/jeu/jeu-sg-dialog.component.html
@@ -29,8 +29,12 @@
         </div>
         <div class="form-group">
             <label class="form-control-label" jhiTranslate="socialGameApp.jeu.dureeMoyenne" for="field_dureeMoyenne">Duree Moyenne</label>
-            <input type="number" class="form-control" name="dureeMoyenne" id="field_dureeMoyenne"
-                [(ngModel)]="jeu.dureeMoyenne"  />
+            <div class="input-group">
+                <input type="number" class="form-control" name="dureeMoyenne" id="field_dureeMoyenne"
+                       [(ngModel)]="jeu.dureeMoyenne"  />
+                <span class="input-group-addon" jhiTranslate="socialGameApp.jeu.minutes">Minutes</span>
+            </div>
+
         </div>
         <div class="form-group">
             <label class="form-control-label" jhiTranslate="socialGameApp.jeu.description" for="field_description">Description</label>
