--- a/src/main/webapp/app/entities/evenement/evenement-sg-dialog.component.html
+++ b/src/main/webapp/app/entities/evenement/evenement-sg-dialog.component.html
@@ -43,6 +43,18 @@
                 <option [ngValue]="getSelected(evenement.jeuxes, jeuOption)" *ngFor="let jeuOption of jeus; trackBy: trackJeuById">{{jeuOption.nom}}</option>
             </select>
         </div>
+        <div class="form-group">
+            <label jhiTranslate="socialGameApp.evenement.sphere" for="field_sphere">Sphere</label>
+            <select class="form-control" id="field_sphere" name="sphere" [(ngModel)]="evenement.sphereId"  required>
+                <option [ngValue]="sphereOption.id" *ngFor="let sphereOption of spheres; trackBy: trackSphereById">{{sphereOption.nom}}</option>
+            </select>
+        </div>
+        <div [hidden]="!(editForm.controls.sphere?.dirty && editForm.controls.sphere?.invalid)">
+            <small class="form-text text-danger"
+                [hidden]="!editForm.controls.sphere?.errors?.required" jhiTranslate="entity.validation.required">
+                This field is required.
+            </small>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" (click)="clear()">
