--- a/src/main/webapp/app/entities/jeu/jeu-sg.component.html
+++ b/src/main/webapp/app/entities/jeu/jeu-sg.component.html
@@ -33,22 +33,19 @@
             <th jhiSortBy="nombreJoueurMin"><span jhiTranslate="socialGameApp.jeu.nombreJoueurMin">Nombre Joueur Min</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="nombreJoueurMax"><span jhiTranslate="socialGameApp.jeu.nombreJoueurMax">Nombre Joueur Max</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="dureeMoyenne"><span jhiTranslate="socialGameApp.jeu.dureeMoyenne">Duree Moyenne</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="image"><span jhiTranslate="socialGameApp.jeu.image">Image</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="genre"><span jhiTranslate="socialGameApp.jeu.genre">Genre</span> <span class="fa fa-sort"></span></th>
             <th></th>
             </tr>
             </thead>
             <tbody>
             <tr *ngFor="let jeu of jeux ;trackBy: trackId">
-                <td><a [routerLink]="['../jeu-sg', jeu.id ]">{{jeu.nom}}</a></td>
+                <td>
+                    <img [src]="'data:'+ jeu.imageContentType + ';base64,' + jeu.image" style="max-height: 30px;" alt="jeu image"/>
+                    <a [routerLink]="['../jeu-sg', jeu.id ]">{{jeu.nom}}</a>
+                </td>
                 <td>{{jeu.nombreJoueurMin}}</td>
                 <td>{{jeu.nombreJoueurMax}}</td>
                 <td>{{jeu.dureeMoyenne}} <span jhiTranslate="commun.minute">minutes</span></td>
-                <td>
-                    <a *ngIf="jeu.image" (click)="openFile(jeu.imageContentType, jeu.image)">
-                        <img [src]="'data:'+ jeu.imageContentType + ';base64,' + jeu.image" style="max-height: 30px;" alt="jeu image"/>
-                    </a>
-                </td>
                 <td jhiTranslate="{{'socialGameApp.GenreJeu.' + jeu.genre}}">{{jeu.genre}}</td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
