--- a/src/main/webapp/app/entities/sphere/sphere-sg.component.html
+++ b/src/main/webapp/app/entities/sphere/sphere-sg.component.html
@@ -64,6 +64,13 @@
                             <span class="fa fa-remove"></span>
                             <span class="hidden-md-down" jhiTranslate="entity.action.delete">Delete</span>
                         </button>
+                        <button type="submit"
+                                (click)="abonnementSphere()"
+                                *ngIf="currentAccount.login !== sphere.administrateurLogin && (currentAccount.login | elementPresentDansListe:sphere.abonnes)"
+                                class="btn btn-danger btn-sm">
+                            <span class="fa fa-plus-circle"></span>
+                            <span class="hidden-md-down" jhiTranslate="entity.action.rejoindre">Rejoindre</span>
+                        </button>
                     </div>
                 </td>
             </tr>
