--- a/src/main/webapp/app/entities/evenement/evenement-sg-dialog.component.html
+++ b/src/main/webapp/app/entities/evenement/evenement-sg-dialog.component.html
@@ -15,7 +15,7 @@
         <div class="form-group">
             <label class="form-control-label" jhiTranslate="socialGameApp.evenement.date" for="field_date">Date</label>
             <div class="d-flex">
-                <input id="field_date" type="datetime-local" class="form-control" name="date" [(ngModel)]="evenement.date"
+                <input id="field_date" type="date" class="form-control" name="date" [(ngModel)]="evenement.date"
                   />
             </div>
         </div>
@@ -32,7 +32,7 @@
         <div class="form-group">
             <label class="form-control-label" jhiTranslate="socialGameApp.evenement.dateFinVote" for="field_dateFinVote">Date Fin Vote</label>
             <div class="d-flex">
-                <input id="field_dateFinVote" type="datetime-local" class="form-control" name="dateFinVote" [(ngModel)]="evenement.dateFinVote"
+                <input id="field_dateFinVote" type="date" class="form-control" name="dateFinVote" [(ngModel)]="evenement.dateFinVote"
                   />
             </div>
         </div>
@@ -45,7 +45,7 @@
         </div>
         <div class="form-group">
             <label jhiTranslate="socialGameApp.evenement.sphere" for="field_sphere">Sphere</label>
-            <select class="form-control" id="field_sphere" name="sphere" [(ngModel)]="evenement.sphereId"  required>
+            <select class="form-control" id="field_sphere" name="sphere" [(ngModel)]="evenement.sphereId" (ngModelChange)="toto()" required>
                 <option [ngValue]="sphereOption.id" *ngFor="let sphereOption of spheres; trackBy: trackSphereById">{{sphereOption.nom}}</option>
             </select>
         </div>
