--- a/src/main/webapp/app/entities/evenement/evenement-sg-dialog.component.html
+++ b/src/main/webapp/app/entities/evenement/evenement-sg-dialog.component.html
@@ -45,7 +45,7 @@
         </div>
         <div class="form-group">
             <label jhiTranslate="socialGameApp.evenement.sphere" for="field_sphere">Sphere</label>
-            <select class="form-control" id="field_sphere" name="sphere" [(ngModel)]="evenement.sphereId" (ngModelChange)="toto()" required>
+            <select class="form-control" id="field_sphere" name="sphere" [(ngModel)]="evenement.sphereId" required>
                 <option [ngValue]="sphereOption.id" *ngFor="let sphereOption of spheres; trackBy: trackSphereById">{{sphereOption.nom}}</option>
             </select>
         </div>
