--- a/src/main/webapp/app/entities/evenement/evenement-sg-dialog.component.html
+++ b/src/main/webapp/app/entities/evenement/evenement-sg-dialog.component.html
@@ -13,9 +13,14 @@
                    [(ngModel)]="evenement.id" readonly />
         </div>
         <div class="form-group">
+            <label class="form-control-label" jhiTranslate="socialGameApp.evenement.nom" for="field_nom">Nom</label>
+            <input type="text" class="form-control" name="nom" id="field_nom"
+                   [(ngModel)]="evenement.nom"  />
+        </div>
+        <div class="form-group">
             <label class="form-control-label" jhiTranslate="socialGameApp.evenement.date" for="field_date">Date</label>
             <div class="d-flex">
-                <input id="field_date" type="date" class="form-control" name="date" [(ngModel)]="evenement.date"
+                <input id="field_date" type="datetime-local" class="form-control" name="date" [(ngModel)]="evenement.date"
                   />
             </div>
         </div>
@@ -25,14 +30,9 @@
                 [(ngModel)]="evenement.lieu"  />
         </div>
         <div class="form-group">
-            <label class="form-control-label" jhiTranslate="socialGameApp.evenement.nom" for="field_nom">Nom</label>
-            <input type="text" class="form-control" name="nom" id="field_nom"
-                [(ngModel)]="evenement.nom"  />
-        </div>
-        <div class="form-group">
             <label class="form-control-label" jhiTranslate="socialGameApp.evenement.dateFinVote" for="field_dateFinVote">Date Fin Vote</label>
             <div class="d-flex">
-                <input id="field_dateFinVote" type="date" class="form-control" name="dateFinVote" [(ngModel)]="evenement.dateFinVote"
+                <input id="field_dateFinVote" type="datetime-local" class="form-control" name="dateFinVote" [(ngModel)]="evenement.dateFinVote"
                   />
             </div>
         </div>
