--- a/src/main/webapp/app/entities/evenement/evenement-sg.component.html
+++ b/src/main/webapp/app/entities/evenement/evenement-sg.component.html
@@ -29,21 +29,19 @@
         <table class="table table-striped">
             <thead>
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
-            <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="date"><span jhiTranslate="socialGameApp.evenement.date">Date</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="lieu"><span jhiTranslate="socialGameApp.evenement.lieu">Lieu</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="nom"><span jhiTranslate="socialGameApp.evenement.nom">Nom</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="dateFinVote"><span jhiTranslate="socialGameApp.evenement.dateFinVote">Date Fin Vote</span> <span class="fa fa-sort"></span></th>
+                <th jhiSortBy="nom"><span jhiTranslate="socialGameApp.evenement.nom">Nom</span> <span class="fa fa-sort"></span></th>
+                <th jhiSortBy="lieu"><span jhiTranslate="socialGameApp.evenement.lieu">Lieu</span> <span class="fa fa-sort"></span></th>
+                <th jhiSortBy="date"><span jhiTranslate="socialGameApp.evenement.date">Date</span> <span class="fa fa-sort"></span></th>
+                <th jhiSortBy="dateFinVote"><span jhiTranslate="socialGameApp.evenement.dateFinVote">Date Fin Vote</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="sphereNom"><span jhiTranslate="socialGameApp.evenement.sphere">Sphere</span> <span class="fa fa-sort"></span></th>
             <th></th>
             </tr>
             </thead>
             <tbody>
             <tr *ngFor="let evenement of evenements ;trackBy: trackId">
-                <td><a [routerLink]="['../evenement-sg', evenement.id ]">{{evenement.id}}</a></td>
-                <td>{{evenement.date | date:'medium'}}</td>
+                <td><a [routerLink]="['../evenement-sg', evenement.id ]">{{evenement.nom}}</a></td>
                 <td>{{evenement.lieu}}</td>
-                <td>{{evenement.nom}}</td>
+                <td>{{evenement.date | date:'medium'}}</td>
                 <td>{{evenement.dateFinVote | date:'medium'}}</td>
                 <td>
                     <div *ngIf="evenement.sphereId">
