--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -3,15 +3,15 @@
         <span class="hipster img-fluid img-rounded"></span>
     </div>
     <div class="col-md-9">
-        <h1 class="display-4" jhiTranslate="home.title">Welcome, Java Hipster!</h1>
-        <p class="lead" jhiTranslate="home.subtitle">This is your homepage</p>
+        <!--<p class="lead" jhiTranslate="home.subtitle">This is your homepage</p>-->
 
         <div [ngSwitch]="isAuthenticated()">
-            <div class="alert alert-success" *ngSwitchCase="true">
-                <span *ngIf="account" jhiTranslate="home.logged.message"
-                    translateValues="{username: '{{account.login}}'}"> You are logged in as user "{{account.login}}". </span>
-            </div>
-
+            <h1 class="display-4" *ngSwitchCase="true" jhiTranslate="home.title" translateValues="{username: '{{account.login}}'}">Welcome, {{account.login}} !</h1>
+            <!--<div class="alert alert-success" *ngSwitchCase="true">-->
+                <!--<span *ngIf="account" jhiTranslate="home.logged.message"-->
+                    <!--translateValues="{username: '{{account.login}}'}"> You are logged in as user "{{account.login}}". </span>-->
+            <!--</div>-->
+            <h4></h4>
             <jhi-calendrier-sg (elements)="[]" *ngSwitchCase="true" ></jhi-calendrier-sg>
 
             <div class="alert alert-warning" *ngSwitchCase="false">
