[ACCUEIL] Ajout gridster

--- a/src/main/webapp/app/home/home.scss
+++ b/src/main/webapp/app/home/home.scss
@@ -24,3 +24,10 @@ only screen and (                min-resolution: 2dppx) {
         background-size: contain;
     }
 }
+
+.grille {
+    height: 70vh;
+    .fit {
+        background: white!important;
+    }
+}
