--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -11,8 +11,16 @@
                 <!--<span *ngIf="account" jhiTranslate="home.logged.message"-->
                     <!--translateValues="{username: '{{account.login}}'}"> You are logged in as user "{{account.login}}". </span>-->
             <!--</div>-->
-            <h4></h4>
-            <jhi-calendrier-sg (elements)="[]" *ngSwitchCase="true" ></jhi-calendrier-sg>
+            <!--<h4>Mon agenda</h4>-->
+            <!--<jhi-calendrier-sg (elements)="[]" *ngSwitchCase="true" ></jhi-calendrier-sg>-->
+
+            <div class="grille" *ngSwitchCase="true">
+                <gridster [options]="options">
+                    <gridster-item [item]="item" *ngFor="let item of dashboard" [ngSwitch]="item['type']">
+                        <jhi-calendrier-sg (elements)="[]" *ngSwitchCase="'calendrier'" ></jhi-calendrier-sg>
+                    </gridster-item>
+                </gridster>
+            </div>
 
             <div class="alert alert-warning" *ngSwitchCase="false">
                 <span jhiTranslate="global.messages.info.authenticated.prefix">If you want to </span>
